--- a/WebovaAplikace/Views/Shared/_Layout.cshtml
+++ b/WebovaAplikace/Views/Shared/_Layout.cshtml
@@ -1,44 +1,46 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+﻿@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor;
+@using Microsoft.AspNetCore.Http;
+
+@{
+    HttpContext? httpContext = HttpContextAccessor.HttpContext;
+    bool pristupOveren = (httpContext != null) && (httpContext.Session.GetString("PristupOveren") == "Ano");
+}
+
+<!DOCTYPE html>
+<html lang="cs">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - WebovaAplikace</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/WebovaAplikace.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WebovaAplikace</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+        <nav>
+            <a href="">Domů</a>
+            <a href="">Domů</a>
+            @if(pristupOveren)
+            {
+            <a href="/Poznamky/Pridat">Přidat poznámku</a>
+            <a href="/Pristup/Zrusit" style="position: absolute; right: 10px">Odhlásit</a>
+            }
+            else
+            {
+                <a href="/Pristup/Overit" style="position: absolute; right: 10px">Přihlásit se</a>
+            }
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main>
+            <h1>@ViewData["Title"]</h1>
             @RenderBody()
         </main>
     </div>
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - WebovaAplikace - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <hr />
+            <p>Copyright &copy; 2022 Ondřej Foltín</p>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
