nefunkční registrace podle uživatelského jména

--- a/WebovaAplikace/Views/Pristup/Vytvorit.cshtml
+++ b/WebovaAplikace/Views/Pristup/Vytvorit.cshtml
@@ -4,6 +4,7 @@
 }
 
 <form action="/Pristup/Vytvorit" method="post">
+        <input type="text" name="uzivatel" placeholder="Zadej uživatelské jméno..." /><br />
     <input type="password" name="heslo" placeholder="Zadejte své heslo..." /><br />
     <input type="password" name="znovu" placeholder="Zadejte znovu pro kontrolu..." /><br />
     <input type="submit" value="Zaregistrovat se" />
