--- a/WebovaAplikace/Views/Shared/_Layout.cshtml
+++ b/WebovaAplikace/Views/Shared/_Layout.cshtml
@@ -17,12 +17,12 @@
 <body>
     <header>
         <nav>
-            <a href="">Domů</a>
+            <a href="/Home/Index">Domů</a>
             <a href="/Poznamky/Prehled">Přehled poznámek</a>
             @if(pristupOveren)
             {
             <a href="/Poznamky/Pridat">Přidat poznámku</a>
-            <a href="/Pristup/Zrusit" style="position: absolute; right: 10px">Odhlásit</a>
+            <a href="/Pristup/Zrusit" style="position: absolute; right: 10px">Odhlásit se</a>
             }
             else
             {
